# rust-on-nails-n7

./: .gitignore  README.md  a.http
.devcontainer/: devcontainer.json
crates/asset-pipeline/: build.rs  package-lock.json  package.json
crates/asset-pipeline/components/: hello_world.ts
crates/asset-pipeline/scss/: index.scss
crates/axum-server/: Cargo.toml
crates/axum-server/src/: api_service.rs  config.rs  errors.rs  main.rs  multiplex_service.rs
crates/axum-server/tests/: config.rs
crates/db/: Cargo.toml  build.rs  cornucopia.rs
crates/db/migrations/: 20231204082437_user_tables.sql
crates/db/queries/: users.sql
crates/db/src/: lib.rs
crates/grpc-api/: Cargo.toml  build.rs
crates/grpc-api/protos/: api.proto
crates/ui-components/src/: layout.rs  users.rs
