[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cornucopia_async = "0.4.0"
deadpool-postgres = "0.10.5"
postgres-types = "0.2.6"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.9"
tokio-postgres-rustls = "0.10.0"
# rustlsのversion0.22では，dangerous_configrationsフィーチャーが削除されている様子
# 参考: https://docs.rs/rustls/latest/rustls/index.html
rustls = { version = ">=0.21.6, <0.22", features = ["dangerous_configuration"] }
webpki-roots = "*"
futures = "*"
serde = { version = "1.0.193", features = ["derive"] }

# queies ={ path = "./queries"}